# ConfComp

./: helloworld.cpp
Calculatrice/: CMakeLists.txt  Makefile  calc.edl  helloworld.cpp  host.cpp
Calculatrice/enclave/: CMakeLists.txt  Makefile  calc.cpp  calc.h  dispatcher.h  enc.cpp
Calculatrice/host/: CMakeLists.txt  Makefile  host.cpp
confidential_computing_intro-main/: .gitignore  README.md
confidential_computing_intro-main/guessing_game/: Makefile  guess.edl
confidential_computing_intro-main/guessing_game/enclave/: Makefile  enc.cpp  guess.cpp  guess.h
confidential_computing_intro-main/guessing_game/host/: Makefile  host.cpp
